# odsc

./: .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DISCLAIMER.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  ONEDRIVE_CONSUMER_SUPPORT.md  QUICKSTART.md  README.md  TESTING_INSTRUCTIONS.md  check_sync_status.sh  config.example.json  diagnose_deletion.sh  icon_preview.py  install.sh  pyproject.toml  refresh-desktop-entry.sh  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
desktop/: odsc.desktop
scripts/: tag-release.sh
src/odsc/: __init__.py  cli.py  command_socket.py  config.py  daemon.py  error_handling.py  file_io.py  gui.py  logging_config.py  oauth_callback.py  onedrive_client.py  path_utils.py  quickxorhash.py  reset_local.py  sync_state.py  system_tray.py  token_store.py  validators.py
src/odsc/backends/: __init__.py  base.py  json_backend.py  migration.py  sqlite_backend.py
src/odsc/gui/: __init__.py  auth_handler.py  conflict_dialog.py  daemon_controller.py  dialogs.py  file_operations.py  file_tree_view.py  main_window.py  menu_bar.py  splash.py
src/odsc/services/: __init__.py  (+1 more)
systemd/: odsc.service
tests/: test_cli_update.py  test_command_socket.py  test_config.py  test_conflicts.py  test_daemon.py  test_decision_engine.py  test_file_cache_service.py  test_oauth_flow.py  test_onedrive_client.py  test_path_utils.py  test_quickxorhash.py  test_sqlite_backend.py  test_sync_safety.py  test_sync_state.py  test_system_tray.py  test_validators.py
tests/manual/: sync_scenarios.py
(+2 files in other folders)
